# bet

./: .gitignore  Cargo.toml  README.md  README.zh_CN.md  email_config.example.json
data/: bet-test@jerryshell.tk.txt
src/: main.rs
