[package]
name = "bet"
version = "0.1.0"
edition = "2021"
authors = ["github.com/jerryshell/bet"]

[dependencies]
lettre = { version = "0.10.0-rc.7", default-features = false, features = [
    "rustls-tls",
    "builder",
    "smtp-transport",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[profile.release]
lto = true
strip = true
