[package]
name = "bet"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jerryshell/bet"

[dependencies]
lettre = { version = "*", default-features = false, features = [
    "rustls-tls",
    "builder",
    "smtp-transport",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1
